--- a/index.html
+++ b/index.html
@@ -1,25 +1,90 @@
-<!doctype html>
-<html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-        <title>Add to Cart</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <div class="container">
-            <img src="assets/cat.png">
-            <input type="text" id="input-field" placeholder="Bread">
-            <button id="add-button">Add to cart</button>
-            <ul id="shopping-list">
-            </ul>
-        </div>
-        <script src="index.js" type="module"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login/Register - Add to Cart</title>
+    <link rel="stylesheet" href="styles.css" />
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        background-color: #f7f7f7;
+      }
+      .auth-container {
+        background-color: white;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        width: 300px;
+        text-align: center;
+      }
+      .auth-container img {
+        width: 120px;
+        margin-bottom: 20px;
+      }
+      .auth-container h1 {
+        margin-bottom: 20px;
+        font-size: 24px;
+        color: #333;
+      }
+      .auth-container input[type="text"],
+      .auth-container input[type="password"] {
+        width: 90%;
+        padding: 10px;
+        margin: 10px 0;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+      }
+      .auth-container button {
+        width: 100%;
+        padding: 10px;
+        background-color: #ff6f61;
+        border: none;
+        border-radius: 5px;
+        color: white;
+        font-size: 16px;
+        cursor: pointer;
+      }
+      .auth-container button:hover {
+        background-color: #ff4c3b;
+        color: white;
+      }
+      .auth-container .toggle-btn {
+        background: none;
+        border: none;
+        color: #ff6f61;
+        cursor: pointer;
+        font-size: 14px;
+        margin-top: 10px;
+      }
+    </style>
+    <script src="login.js" type="module"></script>
+  </head>
+  <body>
+    <div class="auth-container">
+      <img id="img" src="cats/peach-cat-3.png" alt="Add to Cart Logo" />
+      <h1 id="form-title">Login</h1>
+      <input type="text" placeholder="Email" id="email" />
+      <input type="password" placeholder="Password" id="password" />
+      <input
+        type="text"
+        placeholder="Username"
+        id="username"
+        style="display: none"
+      />
+      <button id="submit-btn">Login</button>
+      <button class="toggle-btn">Don't have an account? Register</button>
+    </div>
+    <script>
+      //Random Img Change
+      document.getElementById("img").src = `cats/peach-cat-${
+        Math.floor(Math.random() * 4) + 1
+      }.png`;
+    </script>
+  </body>
 </html>
